--- a/layouts/index.html
+++ b/layouts/index.html
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="text-center">
-        <a href="#" class="btn btn-primary mt-2">Fill the form</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSfz4xE-2DDPGHBb35whbdrxfBwbc67nTzf-k3XnrBU7kXC6aA/viewform" class="btn btn-primary mt-2">Fill the form</a>
       </div>
     </div>
     <button type="button" class="close" aria-label="Close">
