--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -28,31 +28,26 @@
 {{end}}
 {{end}}
 
-
-<footer class="footer pb-5 {{if site.Params.cta.enable}}{{else}}mt-0{{end}}">
+<div class="footer-bottom">
   <div class="container">
-    <div class="row justify-content-center">
+    <div class="row">
       <div class="col-12">
-        <div class="border-top pb-5" data-aos="fade-up"></div>
-      </div>
-      <div class="col-lg-4 col-md-6 col-sm-6" data-aos="fade-up">
-        <div class="pr-4">
-          <a class="navbar-brand" href="{{ site.BaseURL | relLangURL }}">
-            {{ $logo:= site.Params.logo }}
-            {{ if fileExists (add `assets/` $logo) }}
-            {{ $logo:= resources.Get $logo }}
-            <img loading="lazy" decoding="async" class="img-fluid mb-4" width="{{site.Params.logo_width}}" height="45" src="{{$logo.RelPermalink}}" alt="{{ site.Title }}" onerror="this.onerror=null;this.src='{{$logo.RelPermalink}}'">
-            {{ else }}
-            {{site.Params.logo_text | markdownify}}
-            {{ end }}
-          </a>
-          <p class="mb-0">{{site.Params.footer_info | markdownify}}</p>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 mt-5 mt-sm-0" data-aos="fade-up" data-aos-delay="50">
-        <div class="footer-widget">
-          <h3 class="mb-4 h4">Socials</h3>
-
+        <div class="py-4 border-top text-center">
+		
+          <h3 class="mb-4 h3">Location &amp; Contact</h3>
+		
+          {{with site.Params.contact_info}}
+          <ul class="footer-links list-unstyled mb-4">
+            <li>{{.address | markdownify}}</li>
+            {{range first 1 .phone}}
+            {{if .}}
+            <li><a href="tel:{{.}}">{{.}}</a></li>
+            {{end}}
+            {{end}}
+          </ul>
+          {{end}}
+		  
+		  
           {{with site.Params.contact_info.email}}
           <ul class="footer-links list-unstyled mb-4">
             {{range first 1 .}}
@@ -64,7 +59,7 @@
           {{end}}
 
           {{ with site.Params.social}}
-          <ul class="social-links list-inline">
+          <ul class="social-links list-inline mb-4">
             {{ range .}}
             <li class="list-inline-item"><a href="{{.link}}" title="{{.title}}">
               <i class="{{.icon}}"></i>
@@ -73,44 +68,7 @@
           </ul>
           {{end}}
 
-        </div>
-      </div>
-      <div class="col-lg-2 col-md-6 col-sm-6 mt-5 mt-lg-0" data-aos="fade-up" data-aos-delay="100">
-        <div class="footer-widget">
-          <h3 class="mb-4 h4">Quick Links</h3>
-
-          <ul class="footer-links list-unstyled">
-            {{range site.Menus.footer}}
-            <li><a href="{{.URL | relLangURL}}">{{.Name}}</a></li>
-            {{end}}
-          </ul>
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 mt-5 mt-lg-0" data-aos="fade-up" data-aos-delay="150">
-        <div class="footer-widget">
-          <h3 class="mb-4 h4">Location &amp; Contact</h3>
-
-          {{with site.Params.contact_info}}
-          <ul class="footer-links list-unstyled">
-            <li>{{.address | markdownify}}</li>
-            {{range first 1 .phone}}
-            {{if .}}
-            <li><a href="tel:{{.}}">{{.}}</a></li>
-            {{end}}
-            {{end}}
-          </ul>
-          {{end}}
-        </div>
-      </div>
-    </div>
-  </div>
-</footer>
-
-<div class="footer-bottom">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <div class="py-4 border-top text-center">
+		
           <p class="mb-0 content">{{site.Params.copyright | markdownify}}</p>
         </div>
       </div>
